# designpattern4cplusplus

./: .gitignore  README.md
code/01_SimpleFactory/: 01_SimpleFactory.sln  AbstractProduct.h  Eraser.cpp  Factory.cpp  Factory.h  Pencil.h  Ruler.cpp  Ruler.h  client.cpp
code/02_Factory/: 02_Factory.sln  AbstractFactory.h  Eraser.h  EraserFactory.cpp  EraserFactory.h  Pencil.cpp  PencilFactory.cpp  PencilFactory.h  RulerFactory.cpp  RulerFactory.h  client.cpp
code/03_AbstractFactory/: 03_AbstractFactory.sln  AbstractFactory.h  AbstractPencil.h  AbstractRuler.h  ChenguanFactory.cpp  ChenguanFactory.h  ChenguanPencil.cpp  ChenguanPencil.h  ChenguanRuler.cpp  ChenguanRuler.h  DeliFactory.cpp  DeliFactory.h  DeliPencil.cpp  DeliPencil.h  DeliRuler.cpp  DeliRuler.h  client.cpp
code/04_Builder/: 04_Builder.sln  AbstractCar.h  AbstractCarBuilder.h  Cross4S.h  FordCar.h  FordCarBuilder.h  VolvoCar.h  VolvoCarBulder.h  client.cpp
code/05_Prototype/: 05_Prototype.sln  Book.h  CrazyBook.cpp  CrazyBook.h  client.cpp
code/06_Singleton/: 06_Singleton.sln  DatabaseDriver.cpp  DatabaseDriver.h  ThreadSafeDatabaseDriver.cpp  ThreadSafeDatabaseDriver.h  client.cpp
code/07_Adapter/: 07_Adapter.sln  HeadsetJack.h  (+1 more)
code/19_memento/: CMakeLists.txt  client.cpp  memento_types.cpp  memento_types.h
doc/: 01-设计原则.md  02-简单工厂.md  03-工厂方法.md  04-抽象工厂.md  05-建造者.md  06-原型.md  07-单例.md  08-适配器.md  09-桥接.md  10-组合.md  11-装饰.md  12-外观.md  13-享元.md  14-代理.md  15-责任链.md  16-命令.md  17-解释器.md  18-迭代器.md  19-中介者.md  20-备忘录.md  21-观察者.md  22-状态.md  23-策略.md  24-模板方法.md  25-访问者.md  _template.md
(+107 files in other folders)
